# esi

./: .env.example  .gitattributes  .gitignore  .python-version  Looking at your `scrape_and_ingest.py` file, you have two imports related to LanceDB  Main.css_wrong  README.md  The error message you're seeing  agent.py  app.py  chat_utils.py  config.py  cookie_utils.py  debug_script.py  dfpanda_agent.py  esi_agent_instruction.md  file_handler.py  markdown-test-content.md  package-lock.json  package.json  pandas_agent.py  pyproject.toml  requirements.txt  scrape_and_ingest.py  session_manager.py  streamlit_interface.py  stui.py  test_streaming.py  todo.md  tools.py
.qoder/quests/: input-submission-control.md  llm-model-selector.md  llm-settings-sliders.md  markdown-stream-formatter.md  mistral-model-selector.md  openrouter-model-integration.md  sidebar-layout-fix.md  streaming-solution.md
.streamlit/: config.toml
cache/: cache_db_0.9.db
code_interpreter_ws/: Data for reassessment.sav  Multivariate G Study Table.xlsx  Resilience_Dataset.csv  Resultaten Vrijetijdsactiviteiten totaal - EUR.sav  msouttut.spv  multicountry G study.xlsx  template.csv
esi-gr/: agent.py  app_gr.py  config.py  requirements.txt  tools.py
esi-gr/ragdb/: make_rag.py  webpages.txt
ragdb/: __init__.py  make_rag.py
server/: agent.py  config.py  custom_python_repl.py  esi_agent_instruction.md  main.py  openrouter_manager.py  requirements.txt  simple_streaming.py  test_agent_streaming.py  test_openrouter_integration.py  vector_db.py
src/: App.css  App.jsx  index.css
tests/: test_app.py
util/: make_rag.py  pandas_agent.py.bak  pyproject.toml
web_markdown/: www.researchgate.net_profile_George-Michaelides.md
(+90 files in other folders)
