[project]
name = "esi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "lancedb>=0.21.2",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.3",
    "langchainhub>=0.1.21",
    "pandas==2.2.3",
    "pandasai>=2.0.24",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "tavily-python>=0.5.4",
]
