[project]
name = "esi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "lancedb>=0.21.2",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.3",
    "langchainhub>=0.1.21",
    "matplot>=0.1.9",
    "pandas==2.2.3",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "rpy2>=3.5.17",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
    "tavily-python>=0.5.4",
]

[tool.uv.workspace]
members = ["util"]
