[project]
name = "util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.6.0",
    "lancedb>=0.21.2",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.3",
    "pandas>=2.2.3",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
]
